# EventManager

./: Dockerfile  Procfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
event_manager/event_manager/: celery.py  settings.py  urls.py
event_manager/events/: models.py  permissions.py  serializers.py  spectacular_extensions.py  tasks.py  views.py
event_manager/events/migrations/: 0001_initial.py  0002_rename_loction_event_location.py  0003_rename_author_event_user.py  0004_eventregistration.py  0005_alter_event_options_and_more.py  0006_alter_event_slug.py  0007_alter_event_slug.py
